tests/error/misc_errors/extern_bad_type.py
from guppylang.decorator import guppy

x = guppy.extern("x", ty="float[int]")

guppy.compile(x)
